# democracy_cli

./: Cargo.toml  metadata.scale
src/: main.rs
