[package]
name = "democracy-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }

codec = { package = "parity-scale-codec", version = "3.6.5"}
hex = "0.4.3"
pin-utils = "0.1.0"
sp-keyring = "27.0.0"
subxt = "0.32.1"
subxt-signer = { version = "0.32.1", features = ["subxt"]}
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros", "time"] }

